# Mapper

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.py  main.cpp
examples/: driving.lua  taranis.driving.lua
resources/: appicon.kra  mapper.desktop  mapper.rc
rules/: 99-virtual-joystick.rules  update-rules.sh
src/: common.hpp  device.cpp  device.hpp  engine.cpp  gui.cpp  lock.hpp  main.cpp  mapper.hpp  scripts.cpp  vjoystick.cpp  vjoystick.hpp
src/linux/: vjoystick.cpp
src/windows/: vjoy.cpp  vjoy.hpp  vjoystick.cpp
